# sw-opencl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: main.cpp
src/CLManager/: CLManager.cpp  CLManager.h
src/framework/maths/: stats.cpp  vector_utils.cpp
src/opencl/CLManager/: CLManager.cpp  CLManager.h  CLManagerTest.cpp
